--- a/web/index.html
+++ b/web/index.html
@@ -43,7 +43,7 @@
             </div>
             <div id="navbar" class="navbar-collapse collapse" ng-controller="HeaderCtrl">
                 <ul class="nav navbar-nav">
-                    <li ng-class="{ active: isActive('/list')}"><a href="#list">Library</a></li>
+                    <li ng-class="{ active: isActive('/library')}"><a href="#list">Library</a></li>
                     <li ng-class="{ active: isActive('/play-list')}"><a href="#play-list">Play List</a></li>
                 </ul>
                 <form class="nav navbar-nav navbar-right player" ng-controller="PlayerCtrl">
